--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,12 +34,20 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
-  #база данных
+ 
+
+   # База данных
   sqflite: ^2.1.0
-  #база для остальных платформ
+  # База данных для остальных платформ
   sqflite_common_ffi: ^2.1.1+1
-  #работа с папками
+  # Работа с папками
   path_provider: ^2.0.11
+
+   #Добавление функционального программирования
+  dartz: ^0.10.1
+
+  #Хэширование данных
+  crypto: ^3.0.2
 
 dev_dependencies:
   flutter_test:
