--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,9 @@ dependencies:
   cupertino_icons: ^1.0.2
   google_fonts: ^3.0.1
 
+  
+  flutter_bloc: ^8.1.1
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
